# flask_learning

./: .gitignore  .pre-commit-config.yaml  app.py  create_tables.py  pyproject.toml  security.py
.github/workflows/: python-app.yml
models/: item.py  store.py  user.py
resources/: item.py  store.py  user.py
tests/: api_client.py  conftest.py  test_delete_item.py  test_get_home.py  test_get_item.py  test_get_items.py  test_get_store.py  test_get_store_items.py  test_get_stores.py  test_post_create_item.py  test_post_create_store.py  test_post_create_store_item.py  test_put_update_item.py
tests/test_stores/: test_delete_store.py  test_get_store.py  test_get_stores.py  test_post_create_store.py
tests/tests_items/: test_delete_item.py  test_get_item.py  test_get_items.py  test_post_create_item.py  test_put_update_item.py
tests/tests_users/: test_delete_user.py  test_register.py
tests/utils/: api_client.py  random_generator.py
utils/: api_client.py
