[tool.poetry]
name = "flask_learning"
version = "0.1.0"
description = ""
authors = ["Roman Pylypenko <rpylypenko@aligntech.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
