[tool.poetry]
name = "flask_learning"
version = "0.1.0"
description = ""
authors = ["Roman Pylypenko <rpylypenko@aligntech.com>"]

[tool.poetry.dependencies]
python = "3.10"
Flask = "^2.0.3"
requests = "^2.27.1"
pytest = "^7.1.1"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
psutil = "^5.9.0"
Flask-JWT-Extended = "^4.3.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
flake8 = "^4.0.1"
flask-pytest = "^0.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
